2009-06-03  Miloslav Trmač  <mitr@redhat.com>

	* README: Write it.

	* po/Makevars (MSGID_BUGS_ADDRESS): Update.

	* configure.ac: Release 0.1.

	* tests/crypto_roundtrips.sh: Fix line wrapping.

2009-05-25  Miloslav Trmač  <mitr@redhat.com>

	* po/LINGUAS: Add "pl".

2009-05-25  Piotr Drąg <piotrdrag@gmail.com>

	* po/pl.po: New Polish translation.